fix alignment of app store and play store buttons

--- a/css/projects.css
+++ b/css/projects.css
@@ -90,12 +90,30 @@
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+.project-actions {
+	height: 40px;
+}
+.project-actions .btn {
+	display: block;
+	float: left;
+	margin-right: 5px;
+}
+.project-app-badge {
+	display: block;
+	float: left;
+	height: 40px;
+	margin-right: 5px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
 .project-app-badge-ios {
-	position: relative;
-	top: 16px;
-	margin-left: 10px;
+	background-image: url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg);
+	width: 135px;
 }
 .project-app-badge-android {
+	background-image: url(https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png);
+	background-position: -9px center;
 	width: 150px;
 }
 
